[gd_scene load_steps=10 format=3 uid="uid://ks828131xotu"]

[ext_resource type="Texture2D" path="res://entities/art/dds/space_layer_near1.dds" id="1"]
[ext_resource type="Texture2D" path="res://entities/art/dds/space_layer_mid2.dds" id="2"]
[ext_resource type="Texture2D" path="res://entities/art/dds/space_layer_far.dds" id="3"]
[ext_resource type="Texture2D" path="res://entities/art/dds/space_layer_near2.dds" id="4"]
[ext_resource type="PackedScene" path="res://entities/ui/ui_node.tscn" id="5"]
[ext_resource type="Material" uid="uid://b13716jq3y8dc" path="res://entities/universe.tres" id="6"]
[ext_resource type="Material" uid="uid://d33gwqhifk0jq" path="res://entities/art/shader_far.tres" id="7"]
[ext_resource type="Script" path="res://entities/ui/camera.gd" id="8"]
[ext_resource type="Script" path="res://entities/static/script/universe.gd" id="9"]

[node name="universe" type="Node2D"]
script = ExtResource("9")
star_amount = 100
galaxy_arms = 6

[node name="ALL_FLEETS" type="Node" parent="."]

[node name="camera" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("8")

[node name="CanvasLayer" type="CanvasLayer" parent="camera"]

[node name="Interface" parent="camera/CanvasLayer" instance=ExtResource("5")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -300.0
offset_right = 512.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="a_star_debug" type="Line2D" parent="."]
visible = false
default_color = Color(1, 0, 0, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Close" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
material = ExtResource("6")
motion_scale = Vector2(0.05, 0.05)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Close"]
show_behind_parent = true
material = ExtResource("6")
texture = ExtResource("2")

[node name="Mid" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -2
motion_scale = Vector2(0.02, 0.02)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Mid"]
show_behind_parent = true
material = ExtResource("7")
texture = ExtResource("4")

[node name="Far" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.001, 0.001)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Far"]
show_behind_parent = true
material = ExtResource("7")
texture = ExtResource("1")

[node name="Far2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Far2"]
z_index = -5
position = Vector2(-0.840881, 0)
scale = Vector2(3, 3)
texture = ExtResource("3")

[node name="mouse_pointer" type="Node2D" parent="."]
